--- a/package.json
+++ b/package.json
@@ -53,11 +53,18 @@
     "*.{js,ts,json}": "prettier --write"
   },
   "dependencies": {
+    "@ipld/car": "^3.2.3",
+    "bitwise": "^2.1.0",
+    "blob": "^0.1.0",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
+    "ipfs-car": "^0.6.2",
     "ipfs-http-client": "^55.0.0",
     "m3u8-file-parser": "^0.2.4",
+    "nft.storage": "^6.0.0",
     "p-queue": "^6.6.2",
-    "ramda": "^0.27.1"
+    "ramda": "^0.27.1",
+    "web3.storage": "^3.5.4"
   }
 }
