--- a/package.json
+++ b/package.json
@@ -34,23 +34,11 @@
     "@typescript-eslint/parser": "^3.10.1",
     "eslint": "^7.7.0",
     "eslint-config-prettier": "^6.11.0",
-    "husky": "^4.2.5",
-    "lint-staged": "^10.2.13",
     "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
     "ts-node": "^9.0.0",
     "ts-node-dev": "^1.0.0-pre.61",
     "typescript": "^4.0.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{js,ts}": "eslint --cache --fix",
-    "*.ts": "tsc --noEmit",
-    "*.{js,ts,json}": "prettier --write"
   },
   "dependencies": {
     "@ipld/car": "^3.2.3",
@@ -59,10 +47,11 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
+    "files-from-path": "^0.2.4",
     "ipfs-car": "^0.6.2",
     "ipfs-http-client": "^55.0.0",
     "m3u8-file-parser": "^0.2.4",
-    "nft.storage": "^6.0.0",
+    "nft.storage": "^6.0.2",
     "p-queue": "^6.6.2",
     "ramda": "^0.27.1",
     "web3.storage": "^3.5.4"
