--- a/package.json
+++ b/package.json
@@ -42,13 +42,15 @@
   },
   "dependencies": {
     "@ipld/car": "^3.2.3",
+    "axios": "^0.26.1",
     "bitwise": "^2.1.0",
     "blob": "^0.1.0",
     "crypto-js": "^4.1.1",
+    "delay": "^5.0.0",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "files-from-path": "^0.2.4",
-    "ipfs-car": "^0.6.2",
+    "ipfs-car": "^0.7.0",
     "ipfs-http-client": "^55.0.0",
     "m3u8-file-parser": "^0.2.4",
     "nft.storage": "^6.0.2",
